// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate-body autoAssign prepares a message with the committer 1`] = `
"https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;

exports[`generate-body autoAssign prepares a message with the configured assignee 1`] = `
"https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been automagically assigned to @matchai.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;

exports[`generate-body autoAssign prepares a message with the configured assignees 1`] = `
"https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been automagically assigned to @JasonEtco, @matchai and @defunkt.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;

exports[`generate-body autoAssign prepares a message without an assignee 1`] = `
"https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;

exports[`generate-body blobLines generates a body string without a blob, blobLines: 0 1`] = `
"###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;

exports[`generate-body blobLines generates a body string without a blob, blobLines: false 1`] = `
"###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;

exports[`generate-body generates a body string 1`] = `
"https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;

exports[`generate-body generates a body string with a PR 1`] = `
"## Jason!

https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2 in #10. cc @JasonEtco.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;

exports[`generate-body generates a body string with a custom message 1`] = `
"This one has a body

---

https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;

exports[`generate-body generates a body string with a custom message but no blob 1`] = `
"This one has a body

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;

exports[`generate-body respects the configured bodyKeyword 1`] = `
"This one has a body

---

https://github.com/JasonEtco/test/blob/f7d286aa6381bbb5045288496403d9427b0746e2/index.js#L3-L8

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Jason!\\",\\"file\\":\\"index.js\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->"
`;
